--- a/style.css
+++ b/style.css
@@ -1,3 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap');
 body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen','Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',sans-serif;;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen','Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',sans-serif;
+    color: #56351E;
+    margin: 0; 
+    background-color: #EDF7F6;
+}
+
+#header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #F19953;
+}
+
+#title {
+    margin: 1px;
+    font-family: 'Mr Dafoe', cursive;
+}
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#quoteTitle{ color: #8D542A; }
+
+#quoteHolder{
+    border-radius: 10px;
+    border: 1px solid #C47335;
+    padding: 1em;
+    color: #C47335;
+}
+
+#quote{ 
+    font-style: italic;
+    font-size: 1.5em;
+}
+
+#authorQuoteHolder{
+    display: flex;
+    align-items: flex-end;
+    justify-content: end;
 }
